# LLM_SSG_ProjCourse

./: .gitignore  README.md  project_description.md  pyproject.toml
_site/README/: index.html
_site/docs/ssg_selection_matrix/: index.html
_site/project_description/: index.html
docs/: ssg_selection_matrix.md
reports/: llm_calls.jsonl  marketing_m100_llm_calls.jsonl  marketing_m1_llm_calls.jsonl  marketing_m50_llm_calls.jsonl  marketing_run_llm_calls.jsonl  plan2check_llm.jsonl  plan2run_llm_calls.jsonl  portfolio_m1_llm_calls.jsonl  portfolio_m50_llm_calls.jsonl  portfolio_run_llm_calls.jsonl  research_m1_llm_calls.jsonl  research_m50_llm_calls.jsonl  research_run_llm_calls.jsonl  tmp_replay_llm.jsonl
scenarios/: marketing_landing.json  portfolio_migration.json  research_group_site.json
scenarios/migration_text/: portfolio_about.txt  portfolio_projects.txt
scenarios/replay/: marketing_prompt_replay.json  portfolio_prompt_replay.json  research_prompt_replay.json
ssg_case_tool/: __init__.py  cli.py  instrumentation.py  reporting.py  scaffold.py  spec_validation.py  utils.py
